--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ const contractABI = [
    "stateMutability":"view","type":"function"}
 ];
 
-// ✅ Your Deployed Contract Address
+// ✅ Hardcoded Your Deployed Contract Address
 const contractAddress = "0x47c81ab5e1E14aaBCb6A223b86495de8DaA10Ec1";
 
 // ✅ Pinata Keys
